planner/static/styles/main.css
html {
	scroll-padding-top: 70px;
}

a.text-body:hover {
	color: var(--bs-gray-600) !important;
}

.alert {
	cursor: pointer;
}

.requiered-form-label::after {
	content: " *";
	color: red;
}

.requiered-form-label:hover::after {
	content: " * Required";
	color: red;
}

.sticky-offset {
	top: 80px;
}

.form-group .form-label {
	cursor: pointer;
}

.disabled {
	display: none;
}

.subjItem {
	cursor: pointer;
}

.dragging {
	opacity: 0.5;
}
.collapsing {
	transition: 0.2s;
}

